[gd_scene load_steps=97 format=2]

[ext_resource path="res://Assets/Plants/Animations/SpyderOutlineShoot.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Peashooter.gd" type="Script" id=2]
[ext_resource path="res://Assets/Plants/Animations/SpiderPeaShooterIdleShot.png" type="Texture" id=3]
[ext_resource path="res://Assets/Audio/SpiderSpitAttack.mp3" type="AudioStream" id=4]
[ext_resource path="res://Assets/Plants/Animations/RedSpider-Sheet.png" type="Texture" id=5]
[ext_resource path="res://Assets/Plants/Animations/RedSpiderAttack-Sheet.png" type="Texture" id=6]
[ext_resource path="res://Assets/Plants/TestBloodBSheet.png" type="Texture" id=7]
[ext_resource path="res://Assets/Plants/Animations/BloodBuffTileBorderSheet.png" type="Texture" id=8]
[ext_resource path="res://Assets/Plants/Animations/BloodBuffTileDrip.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 5 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 6 )
region = Rect2( 400, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 6 )
region = Rect2( 800, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 6 )
region = Rect2( 1200, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 6 )
region = Rect2( 1600, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 6 )
region = Rect2( 2000, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 400, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 800, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 1200, 0, 400, 400 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "defaultOutline",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "redSpiderAttack",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "redSpiderDefault",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 9 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 9 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 9 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 9 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 9 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 9 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 9 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 9 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 9 )
region = Rect2( 352, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 9 )
region = Rect2( 384, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 9 )
region = Rect2( 416, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 9 )
region = Rect2( 448, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 9 )
region = Rect2( 480, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 9 )
region = Rect2( 512, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 9 )
region = Rect2( 544, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 9 )
region = Rect2( 576, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 9 )
region = Rect2( 608, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 9 )
region = Rect2( 640, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 9 )
region = Rect2( 672, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 9 )
region = Rect2( 704, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 9 )
region = Rect2( 736, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 9 )
region = Rect2( 768, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 9 )
region = Rect2( 800, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 9 )
region = Rect2( 832, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 9 )
region = Rect2( 864, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 7 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 7 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 7 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 7 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 7 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 7 )
region = Rect2( 352, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 7 )
region = Rect2( 384, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 7 )
region = Rect2( 416, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 7 )
region = Rect2( 448, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 7 )
region = Rect2( 480, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 7 )
region = Rect2( 512, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 7 )
region = Rect2( 544, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 7 )
region = Rect2( 576, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 7 )
region = Rect2( 608, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 7 )
region = Rect2( 640, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 7 )
region = Rect2( 672, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 7 )
region = Rect2( 704, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 7 )
region = Rect2( 736, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 7 )
region = Rect2( 768, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 7 )
region = Rect2( 800, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 7 )
region = Rect2( 832, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 7 )
region = Rect2( 864, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=55]
animations = [ {
"frames": [ SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ) ],
"loop": true,
"name": "Drip",
"speed": 5.0
}, {
"frames": [ SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ) ],
"loop": true,
"name": "New Anim 2",
"speed": 5.0
}, {
"frames": [ SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Peashooter" type="Area2D" groups=["Plants"]]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]
autostart = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -8.5 )
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 9 )
animation = "redSpiderAttack"
frame = 4
playing = true
flip_h = true

[node name="BuffNodes" type="Node2D" parent="."]
visible = false

[node name="BloodTile1" type="AnimatedSprite" parent="BuffNodes"]
modulate = Color( 1.5, 1, 1, 1 )
position = Vector2( 32, 0 )
z_index = 6
frames = SubResource( 55 )
animation = "Drip"
frame = 4
playing = true

[node name="BloodTile2" type="AnimatedSprite" parent="BuffNodes"]
position = Vector2( 64, 0 )
z_index = 6
frames = SubResource( 55 )
animation = "Drip"
frame = 1
playing = true

[node name="BloodTile3" type="AnimatedSprite" parent="BuffNodes"]
position = Vector2( -32, 0 )
z_index = 6
frames = SubResource( 55 )
animation = "Drip"
frame = 24
playing = true

[node name="PreviewNodes" type="Node2D" parent="."]
visible = false

[node name="Spider" type="AnimatedSprite" parent="PreviewNodes"]
position = Vector2( 0, -8.5 )
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 9 )
animation = "redSpiderDefault"
frame = 3
playing = true
flip_h = true

[node name="BloodTile1" type="AnimatedSprite" parent="PreviewNodes"]
modulate = Color( 1.5, 1, 1, 1 )
position = Vector2( 32, 0 )
z_index = 6
frames = SubResource( 55 )
animation = "New Anim 2"
frame = 2
playing = true

[node name="BloodTile2" type="AnimatedSprite" parent="PreviewNodes"]
position = Vector2( 64, 0 )
z_index = 6
frames = SubResource( 55 )
animation = "New Anim 2"
frame = 2
playing = true

[node name="BloodTile3" type="AnimatedSprite" parent="PreviewNodes"]
position = Vector2( -32, 0 )
z_index = 6
frames = SubResource( 55 )
animation = "New Anim 2"
frame = 1
playing = true

[node name="AttackAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0

[node name="DMG_RayCast2D" type="RayCast2D" parent="."]
scale = Vector2( 1, 20 )
enabled = true
cast_to = Vector2( 412, 0 )
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="animation_finished" from="PreviewNodes/Spider" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="PreviewNodes/Spider" to="." method="_on_AnimatedSprite_frame_changed"]
